--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-558-klassy-cafe
                             <img src="assets/images/logo.png" width="300px" align="align-self-center">
                             <h6></h6>
                             <div class="main-white-button scroll-to-section">
-                                <a href="#reservation">MENU</a>
+                                <a href="#menu">MENU</a>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@ https://templatemo.com/tm-558-klassy-cafe
                 <div class="col-lg-4">
                     <div class="section-heading">
                         <h6 style="color: white;">Our Menu</h6>
-                        <h2>Our selection of cakes with quality taste</h2>
+                        <h2 style="color: grey">Our selection of cakes with quality taste</h2>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@ https://templatemo.com/tm-558-klassy-cafe
                         <div class='card card2'>
                             <div class="price"><h6>$22</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Klassy Pancake</h1>
+                              <h1 class='title'>Pancake</h1>
                               <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
                               <div class="main-text-button">
                                   <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
@@ -138,7 +138,7 @@ https://templatemo.com/tm-558-klassy-cafe
                         <div class='card card3'>
                             <div class="price"><h6>$18</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Tall Klassy Bread</h1>
+                              <h1 class='title'>Tall Bread</h1>
                               <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
                               <div class="main-text-button">
                                   <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
@@ -162,7 +162,7 @@ https://templatemo.com/tm-558-klassy-cafe
                         <div class='card card5'>
                             <div class="price"><h6>$8.50</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Klassy Cup Cake</h1>
+                              <h1 class='title'>Cup Cake</h1>
                               <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
                               <div class="main-text-button">
                                   <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
@@ -174,7 +174,7 @@ https://templatemo.com/tm-558-klassy-cafe
                         <div class='card card3'>
                             <div class="price"><h6>$7.25</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Klassic Cake</h1>
+                              <h1 class='title'>Cake</h1>
                               <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
                               <div class="main-text-button">
                                   <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
