--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="author" content="Sankalpa Lokuliyanage">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
     <title>HUB AND SPOKE</title>
 
@@ -77,7 +80,7 @@
                           <!-- Item -->
                           <div class="item">
                             <div class="img-fill">
-                                <img src="assets/images/slide-03.jpeg" alt="">
+                                <img src="assets/images/slide-04.jpg" alt="">
                             </div>
                           </div>
                           <!-- // Item -->
@@ -89,14 +92,40 @@
     </div>
     <!-- ***** Main Banner Area End ***** -->
 
+
+    <section class="section" id="new">
+        <div class="container">
+            <div></div>
+        </div>
+    </section>
+
+    <!--discount section start -->
+      <div class="discount_section layout_padding">
+        <div class="container">
+          <div class="discount_bg">
+            <div class="row">
+              <div class="col-sm-8">
+                <h6 style=" font-size: 44px; font-weight: 800;">What's New?</h6>
+                <p style="font-family: 'Dancing  Script', cursive">Savory Sea Scallops with Mentaiko Capelleni</p>
+              </div>
+              <div class="col-sm-4">
+                <div class="image_6"><img src="assets/images/newone.PNG" width="260px"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- discount section end -->
+
+
     <!-- ***** Menu Area Starts ***** -->
     <section class="section" id="menu">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
                     <div class="section-heading">
-                        <h6 style="color: white;">What's New?</h6>
-                        <h2>We Introduced New Foods and Beverages</h2>
+                        <h6 style="color: white; font-size: 24px;">Recommended</h6>
+                        
                     </div>
                 </div>
             </div>
