--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="container">
                 <div class="section-header text-center">
                     
-                    <h3><span>10%</span> off on all menu items for all Airport Staff.</h3>
+                    <h3 style="color: white;"><span style="color: #f2b416">10%</span> off on all menu items for all Airport Staff.</h3>
                     <h5 style="color: #e2e2e2; margin-top: 7px;">*Discount not applicable for promotional items.
                     All prices are inclusive of GST.</h5>
                 </div>
                 <div class="container banner-text">
-                    <p>
+                    <p style="color: white;">
                         All Images are for illustrative purposes and may vary from actual servings.
                     </p>
                     
