--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="container">
                 <div class="section-header text-center">
                     
-                    <h3 style="color: white;"><span style="color: #f2b416">10%</span> off on all menu items for all Airport Staff.</h3>
+                    <h3 style="color: white; margin-top: 10px"><span style="color: #f2b416">10%</span> off on all menu items for all Airport Staff.</h3>
                     <h5 style="color: #e2e2e2; margin-top: 7px;">*Discount not applicable for promotional items.
                     All prices are inclusive of GST.</h5>
                 </div>
                 <div class="container banner-text">
-                    <p style="color: white;">
+                    <p style="color: white; margin-top: 10px;">
                         All Images are for illustrative purposes and may vary from actual servings.
                     </p>
                     
@@ -140,6 +140,8 @@
       <!-- discount section end -->
     </section>
 
+
+
     <!-- ***** Menu Area Starts ***** -->
     <section class="section" id="menu">
         <div class="container">
@@ -157,73 +159,55 @@
                 <div class="owl-menu-item owl-carousel">
                     <div class="item">
                         <div class='card card1'>
-                            <div class="price"><h6>$14</h6></div>
+                            <div class="overlay"></div>
+                            <div class="price"><h6>$19.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Chocolate Cake</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>The Big Brekkie</h1>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class='card card2'>
-                            <div class="price"><h6>$22</h6></div>
+                            <div class="overlay"></div>
+                            <div class="price"><h6>$20.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Pancake</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>Wagyu Beef Burger</h1>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class='card card3'>
-                            <div class="price"><h6>$18</h6></div>
+                            <div class="overlay"></div>
+                            <div class="price"><h6>$19.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Tall Bread</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>Crab Pasta</h1>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class='card card4'>
-                            <div class="price"><h6>$10</h6></div>
+                           <div class="overlay"></div>
+                            <div class="price"><h6>$17.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Blueberry CheeseCake</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>Crab Truffle Roll</h1>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class='card card5'>
-                            <div class="price"><h6>$8.50</h6></div>
+                            <div class="overlay"></div>
+                            <div class="price"><h6>$17.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Cup Cake</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>Avacado Toast</h1>
                             </div>
                         </div>
                     </div>
                     <div class="item">
-                        <div class='card card3'>
-                            <div class="price"><h6>$7.25</h6></div>
+                        <div class='card card6'>
+                            <div class="overlay"></div>
+                            <div class="price"><h6>$9.90</h6></div>
                             <div class='info'>
-                              <h1 class='title'>Cake</h1>
-                              <p class='description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedii do eiusmod teme.</p>
-                              <div class="main-text-button">
-                                  <div class="scroll-to-section"><a href="#reservation">Make Reservation <i class="fa fa-angle-down"></i></a></div>
-                              </div>
+                              <h1 class='title'>Nasi Lemak with Chicken</h1>
                             </div>
                         </div>
                     </div>
