--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="col-lg-6 currently-market-item all breakfast">
                 <div class="item">
                     <div class="left-image">
-                        <img src="assets/images/TheBigBrekkie.png" alt="" style="border-radius: 20px; min-width: 195px;">
+                        <img src="assets/images/TheBigBrekkie.png" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                     </div>
                     <div class="right-content">
                         <div class="price">
@@ -297,11 +297,10 @@
                         </div>
                     </div> -->
 
+                    <h2 style="color: #fdff0d;">Traditional Coffee / Tea</h2>
+
                     <div class="row">
-                        <div class="column-1">
-                            <h4 style="color: #fdff0d">Traditional</h4>
-                            <h4 style="color: #fdff0d">Coffee / Tea</h4>
-                        </div>
+                        
                         <div class="column-2">
                             <h6 style="color: white;">Kopi O/ Teh O</h6>
                             <h6 style="color: white;">Kopi/ Teh</h6>
