--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                         </div>
                     </div> -->
 
-                    <h2 style="color: #fdff0d;">Traditional Coffee / Tea</h2>
-
+                   <!--  <h2 style="color: #fdff0d;">Traditional Coffee / Tea</h2>
+ -->
                     <div class="row">
                         
                         <div class="column-2">
