--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="col-lg-6 currently-market-item all breakfast">
                 <div class="item">
                     <div class="left-image">
-                        <img src="assets/images/avacadotoast.png" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        <img src="assets/images/lunch_item.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                     </div>
                     <div class="right-content">
                         <div class="price">
