--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="col-lg-6 currently-market-item all breakfast">
                 <div class="item">
                     <div class="left-image">
-                        <img src="assets/images/lunch_item.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        <img src="assets/images/TheBigBrekkie.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                     </div>
                     <div class="right-content">
                         <div class="price">
@@ -301,7 +301,7 @@
  -->
                     <div class="row">
                         
-                        <div class="column-2">
+                       <!--  <div class="column-2">
                             <h6 style="color: white;">Kopi O/ Teh O</h6>
                             <h6 style="color: white;">Kopi/ Teh</h6>
                             <h6 style="color: white;">Kopi C/ Teh C</h6>
@@ -316,7 +316,7 @@
                             <h6 style="color: white;">1.90&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.40</h6>
                             <h6 style="color: white;">2.00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.50</h6>
                             <h6 style="color: white;">2.40&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.00</h6>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>            
