--- a/index.html
+++ b/index.html
@@ -285,38 +285,7 @@
             </div>
             <div class="col-lg-6 currently-market-item all beverages">
                 <div class="item">
-                    <!-- <div class="left-image">
-                        <h4 style="color: #fdff0d">Traditional Coffee/Tea</h4>
-                    </div>
-                    <div class="right-content">
-                        <div class="size">
-                            <h6>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hot&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Iced</h6>
-                        </div>
-                        <div class="cont">
-                            <h6>Kopi O/ Teh O   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   1.70&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  2.20</h6>
-                        </div>
-                    </div> -->
-
-                   <!--  <h2 style="color: #fdff0d;">Traditional Coffee / Tea</h2>
- -->
-                    <div class="row">
-                        
-                       <!--  <div class="column-2">
-                            <h6 style="color: white;">Kopi O/ Teh O</h6>
-                            <h6 style="color: white;">Kopi/ Teh</h6>
-                            <h6 style="color: white;">Kopi C/ Teh C</h6>
-                            <h6 style="color: white;">Yung Yang</h6>
-                            <h6 style="color: white;">Gula Melaka Kopi/Teh</h6>
-
-                        </div>
-                        <div class="column-3">
-                            <h6 style="color: white;">Hot&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cold</h6>
-                            <h6 style="color: white;">1.70&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.20</h6>
-                            <h6 style="color: white;">1.80&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.30</h6>
-                            <h6 style="color: white;">1.90&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.40</h6>
-                            <h6 style="color: white;">2.00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.50</h6>
-                            <h6 style="color: white;">2.40&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.00</h6>
-                        </div> -->
+                    <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                     </div>
                 </div>
             </div>            
