--- a/index.html
+++ b/index.html
@@ -286,10 +286,29 @@
             <div class="col-lg-6 currently-market-item all beverages">
                 <div class="item">
                     <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+
                     </div>
                 </div>
             </div>            
            
+            <div class="col-lg-6 currently-market-item all breakfast">
+                <div class="item">
+                    <div class="left-image">
+                        <img src="assets/images/pancakeroyale.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                    </div>
+                    <div class="right-content">
+                        <div class="price">
+                            <h2>$16.90</h2>
+                        </div>
+                        <div class="other-notes">
+                            <h4>Recommended</h4>
+                        </div>
+                        <div class="avai">
+                            <h4>Available from 8am to 6pm</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </div>
         </div>
       </div>
