solve the filter error

--- a/index.html
+++ b/index.html
@@ -251,69 +251,151 @@
           <div class="filters">
             <ul>
               <li data-filter="*"  class="active">All</li>
-              <li data-filter=".breakfast">Breakfast</li>
-              <li data-filter=".toasts">Toasts</li>
-              <li data-filter=".beverages">Beverages</li>
-              <li data-filter=".mains">Mains</li>
-              <li data-filter=".pasta">Pasta</li>
-              <li data-filter=".bar-bites">Bar Bites</li>
-              <li data-filter=".local-classics">Local Classics</li>
-              <li data-filter=".sanwichesandrolls">Sandwiches & Rolls</li>
-              <li data-filter=".shakesanddesserts">Shakes & Desserts</li>
+              <li data-filter=".brk">Breakfast</li>
+              <li data-filter=".tst">Toasts</li>
+              <li data-filter=".bvr">Beverages</li>
+              <li data-filter=".mn">Mains</li>
+              <li data-filter=".pst">Pasta</li>
+              <li data-filter=".bbt">Bar Bites</li>
+              <li data-filter=".lcc">Local Classics</li>
+              <li data-filter=".sar">Sandwiches & Rolls</li>
+              <li data-filter=".sad">Shakes & Desserts</li>
             </ul>
           </div>
         </div>
         <div class="col-lg-12">
-          <div class="row grid">
-            <div class="col-lg-6 currently-market-item all breakfast">
-                <div class="item">
-                    <div class="left-image">
-                        <img src="assets/images/TheBigBrekkie.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
-                    </div>
-                    <div class="right-content">
-                        <div class="price">
-                            <h2>$19.90</h2>
+            <div class="row grid">
+                <div class="col-lg-6 currently-market-item all brk">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/TheBigBrekkie.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                         </div>
-                        <div class="other-notes">
-                            <h4>Recommended</h4>
-                        </div>
-                        <div class="avai">
-                            <h4>Available from 8am to 6pm</h4>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$19.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6 currently-market-item all beverages">
-                <div class="item">
-                    <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
 
+                <div class="col-lg-6 currently-market-item all sar">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/crabtuffleroll.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$17.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 10am to closing</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>            
+
+                  <div class="col-lg-6 currently-market-item all bvr">
+                    <div class="item">
+                        <!-- <div class="left-image"> -->
+                            <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        <!-- </div> -->
+                        <!-- <div class="right-content"> -->
+                            <!-- <div class="price">
+                                <h2>$19.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div> -->
+                            <!-- <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div> -->
+                        <!-- </div> -->
+                    </div>
+                </div>
+
+                <div class="col-lg-6 currently-market-item all brk">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/pancakeroyale.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$16.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+               <!--  <div class="col-lg-6 currently-market-item all bvr">
+                    <div class="item">
+                        <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+
+                        </div>
+                    </div>
+                </div>      -->
+
+
            
-            <div class="col-lg-6 currently-market-item all breakfast">
-                <div class="item">
-                    <div class="left-image">
-                        <img src="assets/images/pancakeroyale.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
-                    </div>
-                    <div class="right-content">
-                        <div class="price">
-                            <h2>$16.90</h2>
+                <!-- <div class="col-lg-6 currently-market-item all breakfast">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/pancakeroyale.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
                         </div>
-                        <div class="other-notes">
-                            <h4>Recommended</h4>
-                        </div>
-                        <div class="avai">
-                            <h4>Available from 8am to 6pm</h4>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$16.90</h2>
+                            </div>
+                            <div class="other-notes">   
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-6 currently-market-item all sanwichesandrolls">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/crabtuffleroll.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$17.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 10am to closing</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
 
   
