--- a/index.html
+++ b/index.html
@@ -322,6 +322,27 @@
                     </div>
                 </div>
 
+                <div class="col-lg-6 currently-market-item all lcc">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/nasilemakwithchicken.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$9.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 7.30am to 9pm</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            
+
                 <div class="col-lg-6 currently-market-item all brk">
                     <div class="item">
                         <div class="left-image">
@@ -342,54 +363,6 @@
                 </div>
 
 
-
-               <!--  <div class="col-lg-6 currently-market-item all bvr">
-                    <div class="item">
-                        <img src="assets/images/traditionalcoffeeortea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
-
-                        </div>
-                    </div>
-                </div>      -->
-
-
-           
-                <!-- <div class="col-lg-6 currently-market-item all breakfast">
-                    <div class="item">
-                        <div class="left-image">
-                            <img src="assets/images/pancakeroyale.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
-                        </div>
-                        <div class="right-content">
-                            <div class="price">
-                                <h2>$16.90</h2>
-                            </div>
-                            <div class="other-notes">   
-                                <h4>Recommended</h4>
-                            </div>
-                            <div class="avai">
-                                <h4>Available from 8am to 6pm</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-6 currently-market-item all sanwichesandrolls">
-                    <div class="item">
-                        <div class="left-image">
-                            <img src="assets/images/crabtuffleroll.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
-                        </div>
-                        <div class="right-content">
-                            <div class="price">
-                                <h2>$17.90</h2>
-                            </div>
-                            <div class="other-notes">
-                                <h4>Recommended</h4>
-                            </div>
-                            <div class="avai">
-                                <h4>Available from 10am to closing</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
 
               </div>
             </div>
