--- a/index.html
+++ b/index.html
@@ -362,6 +362,86 @@
                     </div>
                 </div>
 
+                <div class="col-lg-6 currently-market-item all mn">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/WagyuBeefBurger.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$20.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 11.30am to Closing</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 currently-market-item all pst">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/crabpasta.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$19.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4 style="margin-bottom: -20px;">Recommended</h4>
+                                <h4>Spicy</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 11.30am to Closing</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 currently-market-item all mn">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/fishandchips.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$17.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                                <!-- <h4>Spicy</h4> -->
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 11.30am to Closing</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 currently-market-item all mn">
+                    <div class="item">
+                        <div class="left-image">
+                            <img src="assets/images/grilledsalmon.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        </div>
+                        <div class="right-content">
+                            <div class="price">
+                                <h2>$18.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4 style="margin-bottom: -20px;">Recommended</h4>
+                                <h4>Kids Friendly</h4>
+                            </div>
+                            <div class="avai">
+                                <h4>Available from 11.30am to Closing</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
 
 
               </div>
