--- a/index.html
+++ b/index.html
@@ -236,6 +236,21 @@
     </section>
     <!-- ***** Menu Area Ends ***** -->
 
+    <!-- growyhing -->
+      <div class="growyhing">
+         <div class="container">
+            <div class="row d_flex">
+               <div>
+                  <div class="body_img">
+                     <figure><img src="assets/images/sugarlevel.png" align="#"/></figure>
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <!-- end growyhing -->
+
 
 
 <div class="currently-market">
@@ -441,6 +456,7 @@
                     </div>
                 </div>
 
+                
 
 
 
@@ -452,6 +468,7 @@
 
 
   
+
 
 
 
