--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="row d_flex">
                <div>
                   <div class="body_img">
-                     <figure><img src="assets/images/sugarlevel.png" align="#"/></figure>
+                     <figure><img src="assets/images/sugarlevel.jpg" align="#"/></figure>
                   </div>
                </div>
                </div>
