--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <!-- ***** Menu Area Ends ***** -->
 
     <!-- growyhing -->
-      <div class="growyhing">
+  <!--     <div class="growyhing">
          <div class="container">
             <div class="row d_flex">
                <div>
@@ -248,7 +248,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end growyhing -->
 
 
