--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
                             </div>
                           </div>
                           <!-- // Item -->
+                          <!-- Item -->
+                          <div class="item">
+                            <div class="img-fill">
+                                <img src="assets/images/slide-07.jpeg" width="125%" alt="">
+                            </div>
+                          </div>
+                          <!-- // Item -->
                         </div>
                     </div>
                 </div>
