--- a/index.html
+++ b/index.html
@@ -545,6 +545,42 @@
                         <!-- </div> -->
                     </div>
                 </div>
+                <div class="col-lg-6 currently-market-item all bvr">
+                    <div class="item">
+                        <!-- <div class="left-image"> -->
+                            <img src="assets/images/refreshing.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        <!-- </div> -->
+                        <!-- <div class="right-content"> -->
+                            <!-- <div class="price">
+                                <h2>$19.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div> -->
+                            <!-- <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div> -->
+                        <!-- </div> -->
+                    </div>
+                </div>
+                <div class="col-lg-6 currently-market-item all bvr">
+                    <div class="item">
+                        <!-- <div class="left-image"> -->
+                            <img src="assets/images/specialtea.jpg" alt="image not found" style="border-radius: 20px; min-width: 195px;">
+                        <!-- </div> -->
+                        <!-- <div class="right-content"> -->
+                            <!-- <div class="price">
+                                <h2>$19.90</h2>
+                            </div>
+                            <div class="other-notes">
+                                <h4>Recommended</h4>
+                            </div> -->
+                            <!-- <div class="avai">
+                                <h4>Available from 8am to 6pm</h4>
+                            </div> -->
+                        <!-- </div> -->
+                    </div>
+                </div>
 
                 <div class="col-lg-6 currently-market-item all lcc">
                     <div class="item">
