--- a/index.html
+++ b/index.html
@@ -711,7 +711,11 @@
         </div>
       </div>
 
-
+      <div class="container-fluid py-4">
+        <div class="container text-center">
+            <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="https://sankalpalokuliyanage.github.io/hubandspoke.github.io/">Hub And Spoke</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="https://sankalpalokuliyanage.github.io">Sankalpa Lokuliyanage</a></p>
+        </div>
+    </div>
   
 
 
@@ -719,7 +723,7 @@
 
     
 
-   
+    
     <!-- jQuery -->
     <script src="assets/js/jquery-2.1.0.min.js"></script>
 
