--- a/index.html
+++ b/index.html
@@ -711,6 +711,24 @@
         </div>
       </div>
 
+      <div>
+        <div class="col-lg-6">
+          <div class="section-heading">
+            <div class="line-dec"></div>
+            <h6 style="color: white; font-size: 24px;">Our Location</h6>
+          </div>
+        </div>
+
+    <div class="row">
+
+
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255275.02854473735!2d103.71982526010393!3d1.3732943968461557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da3d681144c761%3A0x1443b39de79f1a50!2sHub%20%26%20Spoke%20Cafe!5e0!3m2!1sen!2ssg!4v1669818880771!5m2!1sen!2ssg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" allowfullscreen="" loading="lazy"></iframe>
+    
+        
+    </div>
+    </div>
+
+
       <div class="container-fluid py-4">
         <div class="container text-center">
             <p class="mb-0">&copy; <a class="text-secondary fw-bold" href="https://sankalpalokuliyanage.github.io/hubandspoke.github.io/">Hub And Spoke</a>. All Rights Reserved. Designed by <a class="text-secondary fw-bold" href="https://sankalpalokuliyanage.github.io">Sankalpa Lokuliyanage</a></p>
